2014-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.m: Fix ifdefs for MINGW to avoid fork relatred code.

2014-05-05  Ivan Vucica <ivan@vucica.net>

	* GNUmakefile: gnustep-make's Master/deb.make now included.
	* Tests/GNUmakefile: gnustep-tests --clean is now permitted to
	fail. This helps in case 'make {dist,}clean' is called by some
	automation.

2014-05-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Set initial state of accepted incoming
	connection streams to be open (otherwise we can't close them).

2014-04-26  Manuel Guesdon <mguesdon@orange-concept.com>
	* Source/NSKeyValueCoding.m
	  Fix exception msg in setValue:forUndefinedKey:
	
2014-04-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSHost.h:
	* Source/NSHost.m:
	Add OSX 10.6 -localizedName method.

2014-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRegularExpression.m: Check for bad range from ICU and
	flag an internal error if we see it; mimic OSX behavior when a
	range limited match fails.

2014-04-11  Fred Kiefer <fredkiefer@gmx.de>

	* Headers/Foundation/NSXMLNodeOptions.h: Add new 10.7 options.
	* Source/NSXMLDocument.m: Use XML_PARSE_NONET as the default
	option for xmlReadMemory. Add XML_PARSE_NOENT when
	NSXMLNodeLoadExternalEntitiesNever is set.

2014-03-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: If parsing something which contains data
	which can't be utf-8, generate a parse error.

2014-03-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: handle invalidation of connection while
	getting root proxy.

2014-03-26 Riccardo Mottola <rm@gnu.org>

	* Source/NSProcessInfo.m (determineOperatingSystem):
	uname() on solaris may return a positive value on success, not just 0

2014-03-25  Fred Kiefer <fredkiefer@gmx.de>

	* Tools/NSOperation.m: ([_finish]) fix logic of 'executing' flag.

2014-03-19  Richard Frith-Macdonald <rfm@gnu.org>
